--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "02 - [ATIVIDADES] Números mágicos e responsabilidade única",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "eslint ."
   },
   "keywords": [],
   "author": "",
